<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gray"
    android:scrollbarThumbVertical="@android:color/transparent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/bg_divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <Switch
            android:id="@+id/sw_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white"
            android:checked="false"
            android:padding="6dp"
            android:text="@string/bluetooth"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/sw_discoverable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white"
            android:checked="false"
            android:padding="6dp"
            android:text="@string/discoverable"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ll_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/bg_divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6sp"
                android:text="@string/match_devices"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/bg_divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6sp"
                android:text="@string/use_devices"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>